kubernetes/apps/grafana/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: grafana-ingress
  namespace: o11y
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`grafana.sobrinho.pt`)
      kind: Rule
      services:
        - name: grafana-service
          port: grafana
  tls:
    secretName: grafana-cert
